Fix feed images

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= config['page']['title'] %></title>
+    <title><%= page_config['title'] %></title>
     <link href="/bootstrap.min.css" rel="stylesheet"/>
     <link href="/bootstrap-responsive.min.css" rel="stylesheet"/>
     <link href="/app.css" rel="stylesheet"/>
@@ -15,7 +15,7 @@
 
 
       <h1 class="titleheader">
-        <%= config['page']['title'] %>
+        <%= page_config['title'] %>
       </h1>
 
       <div id="fbLikeContainer">
